# chatserver

./: .gitignore  Cargo.toml  README.md  config.json.default
.github/workflows/: cargo-checkmate.yaml  rust-ci.yaml
data/: chat_messages.sql  logs.sql  users.sql
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs
src/api/: channel.rs  message.rs  messages.rs  mod.rs  tests.rs
src/dal/: chat_message_repository.rs  mod.rs
src/models/: chat_message.rs  chat_stream.rs  mod.rs
src/server/: mod.rs  server_state.rs
src/utils/: connection_string.rs  mod.rs  repo_statement.rs
tests/: repository_tests.rs  server_tests.rs
