[package]
name = "chatserver"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
async-log = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
futures = "0.3.26"
fake = { version = "2.5.0", features = ["derive", "chrono"] }
rand = "0.8.5"
num-traits = "0.2.15"
num-derive = "0.3.3"
enum-iterator = "1.3.0"
actix-web = { version = "4.3.0" }
actix = { version = "0.13.0" }
actix-rt = { version = "2.8.0" }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-fmt"] }