[package]
name = "chatserver"
version = "0.1.0"
edition = "2021"


[dependencies]
time = { version = "~0.3", features = ["serde", "local-offset", "parsing"] }
tokio = { version = "~1.25", features = ["full"] }
tokio-postgres = { version = "~0.7", features = ["runtime", "array-impls", "with-time-0_3"] }
postgres-types = { version = "~0.2", features = ["derive"] }
log = "~0.4"
pretty_env_logger = "~0.4"
async-log = "~2"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
futures = "~0.3"
fake = { version = "~2.5", features = ["derive", "chrono"] }
rand = "~0.8"
num-traits = "~0.2"
num-derive = "~0.3"
enum-iterator = "~1.3"
actix-web = { version = "~4.3" }
actix = { version = "~0.13" }
actix-rt = { version = "~2.8" }
actix-web-actors = "~4.2"
test-context = "~0.1"
async-trait = "~0.1"

[dev-dependencies]
cargo-husky = { version = "~1.5", features = ["precommit-hook", "run-cargo-fmt"] }
